--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ subjects:
 - !lcsh 'Storytelling -- Poetry'
 - !lcsh 'Tales, Medieval -- Adaptations'
 - !lcc 'PR'
+- GITenberg
 title: 'The Earthly Paradise: A Poem (Part II)'
 url: http://www.gutenberg.org/ebooks/30332
